# loope

./: .gitignore  Cargo.toml  README.md  install.sh
benchmarks/: README.md  _metrics.py  compare.py  deliver.sh  hermetic.sh
benchmarks/results/: 2026-06-29-claude-codex-compare.md  2026-06-29-claude-codex-dryrun.json  2026-06-29-claude-codex-singleshot-dryrun.json  2026-06-29-claude-codex-singleshot.json  2026-06-29-claude-codex.json  2026-06-29-swebench-flask-4045.md  2026-06-29-swebench-flask-batch.md  2026-06-30-swebench-lite5.md  README.md  swebench-batch14.predictions.jsonl  swebench-flask-4045.patch  swebench-flask-batch.predictions.jsonl  swebench-flask-batch.report.json  swebench-lite5.predictions.jsonl  swebench-lite5.report.json
benchmarks/swebench/: README.md  batch.py  eval.sh  import.py  selftest.sh
docs/: README.md
docs/guide/: usage.md
docs/plans/: 2026-06-28-loope-agent-integration-plan.md  2026-06-28-loope-design-contract-plan.md  2026-06-28-loope-iterative-loop-plan.md  2026-06-28-loope-live-rendering-plan.md  2026-06-28-loope-live-visibility-plan.md  2026-06-28-loope-mvp-plan.md  2026-06-28-loope-opencode-adapter-plan.md  2026-06-28-loope-review-orchestration-plan.md  2026-06-28-loope-robustness-plan.md  2026-06-29-loope-convergence-highlight-plan.md  2026-06-29-loope-desktop-hub-plan.md  2026-06-29-loope-source-layout-plan.md  2026-06-29-loope-tui-commands-plan.md  2026-06-29-loope-tui-plan.md  2026-06-30-loope-loop-optimization-plan.md  2026-06-30-loope-rich-rendering-plan.md  2026-07-01-loope-result-landing-plan.md  2026-07-01-loope-tui-layout-plan.md  2026-07-01-loope-tui-preview-scroll-plan.md
docs/prototype/: 2026-06-28-loope-product-prototype.md
docs/specs/: 2026-06-28-loope-agent-integration-spec.md  2026-06-28-loope-cli-ux-spec.md  2026-06-28-loope-design-contract-spec.md  2026-06-28-loope-iterative-loop-spec.md  2026-06-28-loope-live-rendering-spec.md  2026-06-28-loope-live-visibility-spec.md  2026-06-28-loope-mvp-spec.md  2026-06-28-loope-opencode-adapter-spec.md  2026-06-28-loope-review-orchestration-spec.md  2026-06-28-loope-robustness-spec.md  2026-06-29-loope-convergence-highlight-spec.md  2026-06-29-loope-desktop-hub-spec.md  2026-06-29-loope-liquid-glass-design-spec.md  2026-06-29-loope-source-layout-spec.md  2026-06-29-loope-tui-commands-spec.md  2026-06-29-loope-tui-spec.md  2026-06-30-loope-loop-optimization-spec.md  2026-06-30-loope-rich-rendering-spec.md  2026-07-01-loope-result-landing-spec.md  2026-07-01-loope-tui-layout-spec.md  2026-07-01-loope-tui-preview-scroll-spec.md
src/: adapter.rs  cli.rs  engine.rs  executor.rs  lib.rs  main.rs  model.rs  review.rs  stub.rs  subprocess.rs  ui.rs  workspace.rs
src-tauri/: .gitignore  Cargo.toml  README.md  tauri.conf.json
src-tauri/icons/: README.md
src-tauri/src/: lib.rs  main.rs
src-tauri/ui/: app.css  app.js  index.html
src/adapter/: cell.rs  event.rs  stub.rs  subprocess.rs
src/cli/: theme.rs  ui.rs
src/engine/: executor.rs  git.rs  highlight.rs  workspace.rs
src/hub/: json.rs  mod.rs  project.rs  registry.rs  search.rs  session.rs  store.rs
tests/: cli.rs  loop_plan.rs  run_loop.rs
(+28 files in other folders)
