[package]
name = "loope"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Loop Engineering orchestrator for collaborative coding agents."

[lib]
name = "loope"
path = "src/lib.rs"

[[bin]]
name = "loope"
path = "src/main.rs"

[features]
# Off by default: the default build and the `loope` library stay dependency-free
# (std only). `cargo build --features tui` adds the interactive terminal UI.
# ratatui re-exports its crossterm backend, so it is the only TUI dependency.
tui = ["dep:ratatui"]

[dependencies]
ratatui = { version = "0.30", optional = true }
